@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.76 2007-07-11 13:46:42 nicm Exp $
+# $Id: GNUmakefile,v 1.77 2007-07-14 22:24:03 nicm Exp $
 
 .PHONY: clean
 
@@ -53,7 +53,7 @@ endif
 ifeq ($(shell uname),Linux)
 INCDIRS+= -I/usr/include/openssl -Icompat
 SRCS+= compat/strlcpy.c compat/strlcat.c compat/strtonum.c compat/vis.c
-DEFS+= $(shell getconf LFS_CFLAGS) -D_GNU_SOURCE \
+DEFS+= $(shell getconf LFS_CFLAGS) -D_GNU_SOURCE -DWITH_MREMAP \
         -DNO_STRLCPY -DNO_STRLCAT -DNO_SETPROCTITLE -DNO_STRTONUM -DNO_QUEUE_H
 # Required for LLONG_MAX and friends
 CFLAGS+= -std=c99
