@@ -1,3 +1,7 @@
+14 July 2007
+
+* Use mremap(2) on Linux.
+ 
 13 July 2007
 
 * Fix stupid bug (grr) in strb.c which caused a segfault if realloc moved the
@@ -440,4 +444,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.110 2007-07-13 17:43:50 nicm Exp $
+$Id: CHANGES,v 1.111 2007-07-14 22:24:03 nicm Exp $
